--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block content
   h1 Find your train!
   p Select your train below to see its current schedule.
+  p Also make sure you select the correct train!
   #wrapper
     #trainList
       h2 Trains
